# lib_test_pip

./: .gitignore  pyproject.toml  requirements.txt
.github/actions/update-python-project/: action.yml
.github/workflows/: ci.yml  release.yml
lib_test_pip/: __init__.py
lib_test_pip_samir539/: __init__.py  addition.py  multiplication.py  print_stuff.py
tests/: test_addition.py  test_multiplication.py
