[project]
name = "basic_math_lib_samir539"
version = "0.0.1"
description = "basic math lib"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/samir539/lib_test_pip"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"